Fix padding and alignment issues in attendance page

--- a/src/styles/attendance.module.scss
+++ b/src/styles/attendance.module.scss
@@ -1,12 +1,11 @@
 .currentState {
   display: flex;
-
   gap: 3rem;
   width: 90%;
   margin: 0 auto;
   justify-content: center;
   align-items: center;
-  padding: 2.4rem 2rem;
+  padding: 2.6rem 0;
   border-radius: 16px;
   color: var(--white);
   background: red;
@@ -23,21 +22,23 @@
     position: relative;
 
     .time {
-      width: 14rem;
+      width: auto;
     }
 
     .timeState {
       font-size: 1.4rem;
       font-weight: 500;
-      padding-left: 0.8rem;
       margin-bottom: 0.8rem;
       position: absolute;
       bottom: 0;
-      right: 0;
+      right: -1.8rem;
     }
   }
   .iconState {
     font-size: 6rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
 
